syntax = "proto3";

package rpcapi;

// 生成类的包名
option java_package = "com.platon.rosettanet.admin.grpc";
//生成的数据访问类的类名，如果没有指定此值，则生成的类名为proto文件名的驼峰命名方法
option java_outer_classname = "AuthRpcMessage";

import "carrier/api/common_message.proto";


//  ------------------------  auth  ------------------------


message ApplyIdentityJoinRequest {
    OrganizationIdentityInfo member = 1;           // 申请准入身份
}

message GetNodeIdentityResponse {
    int32                    status = 1;                       // 响应码
    string                   msg    = 2;                          // 错误信息
    OrganizationIdentityInfo owner  = 3;                        // 自己身份信息
}

message GetIdentityListResponse {
    int32                             status      = 1;                       // 响应码
    string                            msg         = 2;                          // 错误信息
    repeated OrganizationIdentityInfo member_list = 3;                  // 全网身份信息列表
}

service AuthService {

  // 数据授权申请

  // 数据授权投票

  // 申请准入网络
  rpc ApplyIdentityJoin (ApplyIdentityJoinRequest) returns (SimpleResponseCode);
  // 注销准入网络
  rpc RevokeIdentityJoin (EmptyGetParams) returns (SimpleResponseCode);
  // 查询自己组织的identity信息
  rpc GetNodeIdentity (EmptyGetParams)returns (GetNodeIdentityResponse);
  // 查询全网全部已发布的 身份信息
  rpc GetIdentityList (EmptyGetParams) returns (GetIdentityListResponse);
}
